--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -38,7 +38,10 @@
 
 #boom-movie-detail-poster-browser {
     display: inline-block;
-    width: 990px; height: 245px;
+    width: 1150px; height: 245px; /* width = 990x + 150 + 10 */
+
+    position: absolute;
+    clip: rect(0px, 970px, 245px, 0px);
 
     background-color: rgba(0, 0, 0, 0.25);
     }
@@ -51,7 +54,7 @@
     display: inline-block;
     width: 1090px; height: 225px;
     float: right;
-    padding-top: 20px;
+    padding: 20px 0 0 20px;
 
     background: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0));
     }
