Disabled buttons in detail browser for now.

--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -98,6 +98,8 @@
     }
 
 #boom-movie-detail-browser-buttons {
+    display: none; /* TODO: remove debugging prop */
+
     list-style: none;
     margin: 0;
     padding: 10px 0;
