--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -28,9 +28,9 @@
 
     /* width: 2080px; height: 245px;
     position: absolute; top: 1080px; left: -160px; */
-    width: 1920px; height: 245px;
+    width: 1920px; height: 247px;
     position: absolute; left: 0; top: 1080px;
-    /* background-color: rgba(0, 0, 0, 0.25); */
+    background-color: rgba(0, 0, 0, 0.25);
 
     /* -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
@@ -40,10 +40,10 @@
 
 #boom-movie-detail-poster-browser {
     display: inline-block;
-    width: 1150px; height: 245px; /* width = 990x + 150 + 10 */
+    width: 1150px; height: 244px; /* width = 990x + 150 + 10 */
 
-    position: absolute; margin-left: -160px;
-    clip: rect(0px, 960px, 245px, 170px);
+    position: absolute; margin-left: -160px; margin-top: 1px;
+    clip: rect(10px, 960px, 235px, 170px);
 
     /* background-color: rgba(0, 0, 0, 0.25); */
     }
@@ -54,11 +54,11 @@
 
 #boom-movie-detail-browser-info {
     display: inline-block;
-    width: 1090px; height: 230px;
+    width: 1089px; height: 232px;
     /* float: right; */
     padding: 15px 0 0 20px;
 
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0) 100%);
+    /* background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0) 100%); */
     /* background-color: rgba(0, 0, 0, 0.25); */
     }
 
@@ -147,7 +147,7 @@
 
 #boom-movie-detail-browser-focus {
     display: block;
-    position: absolute; top: 1083px; left: 3px;
+    position: absolute; top: 1084px; left: 2px;
     width: 156px; height: 231px;
     border: 4px solid white;
     }
