--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -39,17 +39,18 @@
     }
 
 #boom-movie-detail-poster-browser {
-    display: inline-block;
-    width: 1150px; height: 244px; /* width = 990x + 150 + 10 */
+    /* display: inline-block; */
+    display: none;
+    width: 1150px; height: 247px; /* width = 990x + 150 + 10 */
 
-    position: absolute; margin-left: -160px; margin-top: 1px;
-    clip: rect(10px, 960px, 235px, 170px);
+    position: absolute; margin-left: -160px; /* margin-top: 1px; */ bottom: -247px;
+    clip: rect(12px, 960px, 237px, 170px);
 
     /* background-color: rgba(0, 0, 0, 0.25); */
     }
 
 #boom-movie-detail-poster-browser img {
-    margin: 10px 0 0 10px;
+    margin: 12px 0 0 10px;
     }
 
 #boom-movie-detail-browser-info {
@@ -146,8 +147,10 @@
     }
 
 #boom-movie-detail-browser-focus {
-    display: block;
-    position: absolute; /* top: 1084px; left: 2px; */ top: 837px;
+    /* display: block; */
+    display: none;
+    position: absolute; /* top: 1084px; left: 2px; */ /* top: 837px; */ /* bottom: 4px; */ bottom: -244px;
+
     width: 156px; height: 231px;
     border: 4px solid white;
     }
@@ -267,10 +270,13 @@
     background-color: black;
     }
 
-#boom-movie-detail-poster-fade-in {
+.boom-movie-detail-poster-loader {
+    display: inline;
     width: 1920px; height: 1080px;
     position: absolute; left: 0; top: 0;
-    display: none;
+    opacity: 0;
+    /* display: none; */
+
 
     /* -webkit-transform: translate3d(0, 0, 0); */
     }
