--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -117,38 +117,29 @@
     }
 
 #boom-movie-detail-browser-buttons {
-    display: none; /* TODO: remove debugging prop */
-
     list-style: none;
     margin: 0;
     padding: 10px 0;
 
-    position: absolute; bottom: -30px; right: 814px;
-    width: 146px; height: 245px;
+    position: absolute; bottom: -20px; right: 820px;
+    width: 46px; height: 245px;
     }
 
 #boom-movie-detail-browser-buttons li {
     display: block;
+    width: 20px; height: 34px;
     opacity: 0.75;
 
-    margin-bottom: 15px;
-
+    font: bold 28px/32px Ka Boom;
     color: white; text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    /* letter-spacing: 0.05em; */
+    text-align: center;
 
-    border: 1px solid transparent;
-    /*
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    background-color: rgb(21, 34, 50);
-    box-shadow: 0 2px 6px rgba(0, 0 , 0, 0.5),inset 1px 1px rgba(255, 255, 255, 0.2),inset 0 1px rgba(255, 255, 255, 0.2),inset 0 10px 20px rgba(255, 255, 255, 0.25),inset 0 0 4px rgba(255, 255, 255, 0.3);
-    */
-
+    margin-bottom: 16px;
     padding: 4px 12px;
-    font-size: 22px;
-    height: 30px; line-height: 30px;
-    text-transform: uppercase;
-    width: 120px;
-    border-radius: 2px;
-    letter-spacing: 1px;
+    border: 1px solid transparent; border-radius: 8px;
+
+    background-color: rgba(0, 0, 0, 0.75);
     }
 
 #boom-movie-detail-browser-buttons li.boom-active {
@@ -157,7 +148,7 @@
     border: 1px solid rgba(0, 0, 0, 0.5);
     background-color: rgb(21, 34, 50);
     box-shadow: 0 2px 6px rgba(0, 0 , 0, 0.5),inset 1px 1px rgba(255, 255, 255, 0.2),inset 0 1px rgba(255, 255, 255, 0.2),inset 0 10px 20px rgba(255, 255, 255, 0.25),inset 0 0 4px rgba(255, 255, 255, 0.3);
-        }
+    }
 
 #boom-movie-detail-browser-buttons i {
     display: inline-block;
