--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -28,9 +28,10 @@
 
     /* width: 2080px; height: 245px;
     position: absolute; top: 1080px; left: -160px; */
-    width: 1920px; height: 247px;
-    position: absolute; left: 0; /* top: 1080px; */ bottom: 0px; /* top: 833px; */
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0.25) 100%);
+    width: 1920px; height: 470px; /* 247px; */
+    position: absolute; left: 0; /* top: 1080px; */ bottom: -223px;  /* top: 833px; */
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0.25) 100%),
+                linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0) 75%);
 
     /* -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
@@ -43,7 +44,7 @@
     display: none;
     width: 1150px; height: 247px; /* width = 990x + 150 + 10 */
 
-    position: absolute; margin-left: -160px; /* margin-top: 1px; */ bottom: -247px;
+    position: absolute; margin-left: -160px; /* margin-top: 1px; */ /* bottom: -247px; */ bottom: -24px;
     clip: rect(12px, 960px, 237px, 170px);
 
     /* background-color: rgba(0, 0, 0, 0.25); */
@@ -66,10 +67,10 @@
 #boom-movie-detail-browser-title {
     display: inline-block;
     line-height: 50px;
-    font-size: 40px;
-    font-weight: bold;
+    font-size: 40px; font-weight: bold;
 
     width: 925px;
+    overflow-y: hidden;
 
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
     }
@@ -97,7 +98,7 @@
     display: inline-block;
     /* margin-right: 30px; */
     position: absolute;
-    bottom: 24px;
+    bottom: 247px;
     }
 
 #boom-detail-release {
@@ -114,6 +115,15 @@
 
 #boom-detail-genres {
     left: 360px;
+    }
+
+#boom-detail-browser-description {
+    position: absolute; left: 0; top: 235px;
+    width: 1550px; height: 325px;
+    font-size: 30px; font-weight: bold;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    padding: 20px 30px 0 30px;
+    overflow-y: hidden;
     }
 
 #boom-movie-detail-browser-buttons {
@@ -137,7 +147,7 @@
 
     margin-bottom: 16px;
     padding: 4px 12px;
-    border: 1px solid transparent; border-radius: 8px;
+    border: 1px solid transparent; border-radius: 2px;
 
     background-color: rgba(0, 0, 0, 0.75);
     }
@@ -241,21 +251,7 @@
     /* -webkit-text-stroke: 0.75px rgba(0, 0, 0, 0.25); */
 
 
-#boom-movie-detail-description {
-    display: none;
 
-    position: absolute; left: 360px; top: 0;
-
-    font-size: 40px;
-    line-height: 60px;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
-    width: 1472px; height: 1080px;
-    font-weight: bold;
-    padding: 18px 0 0 24px;
-
-    flex-direction: column;
-    justify-content: center;
-    }
 
 #boom-movie-trailer {
     display: none;
