--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -65,21 +65,24 @@
     }
 
 #boom-movie-detail-browser-title {
-    display: inline-block;
+    display: block;
     line-height: 50px;
     font-size: 40px; font-weight: bold;
 
-    width: 925px;
+    width: 1060px; height: 100px;
     overflow-y: hidden;
 
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
     }
 
 #boom-movie-detail-browser-collection {
-    display: inline-block;
+    display: block;
     font-size: 25px;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
     padding-top: 10px;
+
+    position: absolute;
+    bottom: 292px;
     }
 
 #boom-movie-detail-browser-additional {
@@ -284,4 +287,13 @@
 
 
     /* -webkit-transform: translate3d(0, 0, 0); */
+    }
+
+#boom-detail-large-poster {
+    display: none;
+
+    position: absolute; bottom: -480px; right: 10px;
+    width: 300px; height: 450px;
+
+    -webkit-box-shadow: 0 2px 30px 4px rgba(0, 0, 0, 0.5);
     }
