Renamed GUI HTML elements for better clarity.

--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -20,7 +20,7 @@
     background-color: black;
     }
 
-#boom-poster-focus {
+#boom-grid-focus {
     display: none;
 
     width: 216px; height: 316px;
