--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -23,7 +23,7 @@
     -webkit-transform-style: preserve-3d; */
     }
 
-#boom-movie-detail-head {
+#boom-detail-panel {
     display: block;
 
     /* width: 2080px; height: 245px;
@@ -86,12 +86,12 @@
     }
 
 #boom-movie-detail-browser-additional {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    list-style: none; margin: 0; padding: 0;
 
     /* position: absolute; */
     /* bottom: 25px; */
+    position: absolute; bottom: 247px;
+
 
     font-size: 25px;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
@@ -99,9 +99,11 @@
 
 #boom-movie-detail-browser-additional li {
     display: inline-block;
+
+    margin-right: 40px;
     /* margin-right: 30px; */
-    position: absolute;
-    bottom: 247px;
+    /* position: absolute;
+    bottom: 247px; */
     }
 
 #boom-detail-release {
@@ -168,7 +170,7 @@
     width: 19px;
     }
 
-#boom-movie-detail-browser-focus {
+#boom-detail-focus {
     /* display: block; */
     display: none;
     position: absolute; /* top: 1084px; left: 2px; */ /* top: 837px; */ /* bottom: 4px; */ bottom: -244px;
