--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -33,6 +33,9 @@
     background: linear-gradient(to right, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0.25) 100%),
                 linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.25) 50%, rgba(0, 0, 0, 0) 75%);
 
+    /* -webkit-perspective: 1000px;
+    -webkit-perspective-origin: 50% 50%; */
+
     /* -webkit-transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
     -webkit-perspective: 1000;
@@ -215,12 +218,6 @@
     /* box-shadow: inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3); */
     }
 
-#boom-movie-detail-bottom {
-    margin: 0 0 30px 30px;
-    height: 320px;
-    padding-top: 180px;
-    }
-
 .boom-detail-info {
     color: white;
 
@@ -232,31 +229,6 @@
     /* line-height: 30px; */
     letter-spacing: 1px;
     }
-
-#boom-movie-detail-right {
-    z-index: 1000;
-    position: absolute;
-
-    margin-left: 1920px;
-    /* width: 1530px; */
-    }
-
-#boom-movie-detail-title {
-    height: 40px;
-    font: 30px/35px Ka Boom;
-    /* text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.75); */
-    -webkit-transform-origin: 0 0;
-    -webkit-transform: rotate(90deg);
-    width: 1080px;
-    padding-left: 30px;
-    padding-right: 30px;
-    background-color: black;
-    overflow: hidden;
-    }
-    /* -webkit-text-stroke: 0.75px rgba(0, 0, 0, 0.25); */
-
-
-
 
 #boom-movie-trailer {
     display: none;
@@ -291,11 +263,27 @@
     /* -webkit-transform: translate3d(0, 0, 0); */
     }
 
-#boom-detail-large-poster {
+#boom-detail-poster-left {
     display: none;
 
     position: absolute; bottom: -480px; right: 10px;
     width: 300px; height: 450px;
 
-    -webkit-box-shadow: 0 2px 30px 4px rgba(0, 0, 0, 0.5);
+    -webkit-perspective: 1920px;
+    -webkit-transform-style: preserve-3d;
+    /* -webkit-perspective-origin-x: 50%;
+    -webkit-perspective-origin-y: 50%; */
+
+    /* -webkit-box-shadow: 0 2px 30px 4px rgba(0, 0, 0, 0.5); */
+    }
+
+#boom-detail-poster-left img {
+    /* -webkit-transform: rotateY(0deg) translateZ(150px) scale(0.9225); */
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+
+    }
+
+#boom-detail-poster-right {
+
     }
