Renamed menu element.

--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -21,7 +21,7 @@ body {
     overflow: hidden;
     }
 
-#boom-movie-config {
+#boom-menu {
     display: none;
 
     width: 750px; height: 1080px;
