--- a/frontend/app/css/buttons.css
+++ b/frontend/app/css/buttons.css
@@ -1,7 +1,7 @@
 /**
  *  Button styles.
  *
- *  @author Nikola Klaric (nikola@generic.company)
+ *  @author Nikola Klaric (nikola@klaric.org)
  *  @copyright Copyright (c) 2013-2014 Nikola Klaric
  */
 
