--- a/frontend/app/css/ha.css
+++ b/frontend/app/css/ha.css
@@ -1,7 +1,7 @@
 /**
  *  Force hardware-acceleration for specific layers.
  *
- *  @author Nikola Klaric (nikola@generic.company)
+ *  @author Nikola Klaric (nikola@klaric.org)
  *  @copyright Copyright (c) 2013-2014 Nikola Klaric
  */
 
