--- a/frontend/app/css/grid.css
+++ b/frontend/app/css/grid.css
@@ -5,7 +5,7 @@
  *  @copyright Copyright (c) 2013-2014 Nikola Klaric
  */
 
-#boom-image-color-canvas {
+#boom-image-sampler-canvas {
     display: none;
     position: absolute; top: 0; left: 0;
     }
