Use Open Sans and original Font Awesome fonts.

--- a/frontend/app/css/app.css
+++ b/frontend/app/css/app.css
@@ -13,7 +13,7 @@ body {
     cursor: none !important;
     pointer-events: none !important;
 
-    font-family: 'Ka Boom', sans-serif;
+    font-family: 'cd817b231ec04451b3457feacab854ad';
     color: white; background-color: black;
 
     /* width: 1920px; */ /* height: 1080px; */
