--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -148,7 +148,7 @@
     width: 20px; height: 34px;
     opacity: 0.75;
 
-    font: bold 28px/32px Ka Boom;
+    font: bold 28px/32px cd817b231ec04451b3457feacab854ad;
     color: white; text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
     /* letter-spacing: 0.05em; */
     text-align: center;
