--- a/frontend/app/css/detail.css
+++ b/frontend/app/css/detail.css
@@ -276,3 +276,41 @@
 
     -webkit-backface-visibility: hidden;
     }
+
+#boom-detail-buttons-shade {
+    display: none; opacity: 0;
+
+    position: absolute; top: 0; left: 0;
+    width: 1920px; height: 1080px;
+
+    background-color: black;
+    }
+
+#boom-detail-available-streams {
+    display: none; opacity: 0;
+    justify-content: center; flex-direction: column;
+
+    position: absolute; top: 0; left: 0;
+    width: 1920px; height: 1080px;
+
+    text-align: center;
+    }
+
+#boom-detail-available-streams div {
+    width: auto; height: auto;
+
+    margin: 0 auto 30px auto;
+    padding: 6px 14px 6px 20px;
+
+    color: white;
+    font-size: 34px; font-weight: bold;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+    }
+
+#boom-detail-available-streams div:last-child {
+    margin-bottom: 0;
+    }
+
+#boom-detail-watch-trailer {
+
+    }
