--- a/frontend/app/css/buttons.css
+++ b/frontend/app/css/buttons.css
@@ -1,8 +1,23 @@
 /**
- *  Button styles.
+ *  fan - A movie compilation and playback app for Windows. Fast. Lean. No weather widget.
+ *  Copyright (C) 2013-2014 Nikola Klaric.
+ *
+ *  This program is free software; you can redistribute it and/or
+ *  modify it under the terms of the GNU General Public License
+ *  as published by the Free Software Foundation; either version 2
+ *  of the License, or (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
  *
  *  @author Nikola Klaric (nikola@klaric.org)
- *  @copyright Copyright (c) 2013-2014 Nikola Klaric
+ *  @copyright Copyright (C) 2013-2014 Nikola Klaric
  */
 
 .boom-button {
@@ -63,18 +78,6 @@
 
     background-color: rgb(0, 0, 0);
     }
-/*
-    width: 300px;
-    height: 45px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    border-radius: 2px;
-
-    box-shadow: 0 2px 6px rgba(0, 0 , 0, 0.5),
-                inset 1px 1px rgba(255, 255, 255, 0.2),
-                inset 0 1px rgba(255, 255, 255, 0.2),
-                inset 0 10px 20px rgba(255, 255, 255, 0.25),
-                inset 0 0 4px rgba(255, 255, 255, 0.3);
-    } */
 
 .boom-align-left {
     text-align: left;
