--- a/frontend/css/buttons.css
+++ b/frontend/css/buttons.css
@@ -34,7 +34,8 @@
     text-align: center;
     font-size: 30px;
     line-height: 45px;
-    letter-spacing: 4px;
+    font-weight: bold;
+    /* letter-spacing: 4px; */
     }
 
 .boom-button.boom-enabled {
@@ -86,4 +87,10 @@
 
 .boom-button-wide {
     width: 720px;
+    }
+
+.boom-button i {
+    display: inline-block;
+    width: 40px; height: 45px; line-height: 45px;
+    margin-right: 8px;
     }
