--- a/frontend/css/detail.css
+++ b/frontend/css/detail.css
@@ -245,7 +245,7 @@
     }
 
 #boom-detail-available-streams div {
-    width: auto; height: auto;
+    width: 720px; height: auto;
 
     margin: 0 auto 30px auto;
     padding: 6px 14px 6px 20px;
@@ -253,6 +253,13 @@
     color: white;
     font-size: 34px; font-weight: bold;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.75);
+
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    box-shadow: 0 2px 6px rgba(0, 0 , 0, 0.5),
+                inset 1px 1px rgba(255, 255, 255, 0.2),
+                inset 0 1px rgba(255, 255, 255, 0.2),
+                inset 0 10px 20px rgba(255, 255, 255, 0.25),
+                inset 0 0 4px rgba(255, 255, 255, 0.3);
     }
 
 #boom-detail-available-streams div:last-child {
