Prepared CSS for supporting multiple resolutions.

--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -85,3 +85,13 @@ iframe[seamless] {
 img[src='']  {
     content: "";
     }
+
+/* ================================================================================================================== */
+
+@media (device-width: 1920px) {
+
+    }
+
+@media (device-width: 2560px) {
+
+    }
