--- a/frontend/css/configure.css
+++ b/frontend/css/configure.css
@@ -160,3 +160,14 @@
     display: block;
     margin: 0 auto;
     }
+
+
+/* ================================================================================================================== */
+
+@media (device-width: 1920px) {
+
+    }
+
+@media (device-width: 2560px) {
+
+    }
