--- a/frontend/css/detail.css
+++ b/frontend/css/detail.css
@@ -212,3 +212,13 @@
 #boom-detail-watch-trailer {
 
     }
+
+/* ================================================================================================================== */
+
+@media (device-width: 1920px) {
+
+    }
+
+@media (device-width: 2560px) {
+
+    }
