--- a/frontend/css/grid.css
+++ b/frontend/css/grid.css
@@ -234,3 +234,13 @@
     -webkit-transform: translate(0, 0);
     }
 
+
+/* ================================================================================================================== */
+
+@media (device-width: 1920px) {
+
+    }
+
+@media (device-width: 2560px) {
+
+    }
