More resolution-dependency.

--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -89,9 +89,15 @@ img[src='']  {
 /* ================================================================================================================== */
 
 @media (device-width: 1920px) {
-
+    body {
+        width: 1920px;
+        height: 1080px;
     }
+}
 
 @media (device-width: 2560px) {
-
+    body {
+        width: 2560px;
+        height: 1440px;
     }
+}
